--- a/config/config_example.json
+++ b/config/config_example.json
@@ -1,7 +1,7 @@
 {
   "db": {
-    "username": "root",
-    "password": "root",
+    "username": "ynapi",
+    "password": "dRtB{}sZnB",
     "dbname": "twinder"
   }
 }
