--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "bwip-js": "^1.0.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jsonwebtoken": "^7.0.1",
     "morgan": "~1.7.0",
     "multer": "^1.1.0",
+    "randomstring": "^1.1.5",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
