--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^7.0.1",
     "morgan": "~1.7.0",
     "multer": "^1.1.0",
+    "pug": "^2.0.0-beta4",
     "randomstring": "^1.1.5",
     "serve-favicon": "~2.3.0"
   },
